--- a/src/template/pages/home.pug
+++ b/src/template/pages/home.pug
@@ -5,6 +5,7 @@ block variables
 
 block main
 	main.content(data-page='home')
+		h1 Testing
 		+b.SECTION.screen
 			.
 				<svg data-section-svg="a" data-section-svg-fill="#51E3C2" width="1280px" height="577px" viewBox="0 0 1280 577">
