--- a/src/template/pages/home.pug
+++ b/src/template/pages/home.pug
@@ -9,3 +9,4 @@ block main
 			+e.canvas
 				+e.SVG.svg.is-hidden
 					path#path-screen-1(d='M7.9,21.4c7-8.1,11.4-9.1,25-15S89.2-9.6,96.5,21.2c7.4,31,11.1,76.3-17.6,81.3c-28.7,5-65-11.6-74-32S0.9,29.6,7.9,21.4z')
+					path#path-screen-2(d='M15.2,0c0,0-22.2,105-13,163s36.1,117,60,116s43.6-34.9,65-66s76.1-98.4,146-116s0-97,0-97H15.2z')
