--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -13,6 +13,7 @@
 /* COMPONENTS */
 @import 'components/common';
 @import 'components/jelly';
+@import 'components/header';
 
 /* PAGES */
 @import 'pages/home/home';
