--- a/src/template/components/_header.pug
+++ b/src/template/components/_header.pug
@@ -1,2 +1,10 @@
-mixin header()
-    header
++b.HEADER.header
+	+e.container.container
+		+e.logo
+			+e.logo-img(src='static/img/logo.svg' alt='image')
+		+e.right
+			-navList = ['Преимущества', 'Как это работает', 'Сферы деятельности', 'Как создаем', 'Кейсы', 'Блог', 'Контакты']
+			+e.NAV.nav
+				ul
+					each el in navList
+						li: a(href='#!')= el
