--- a/src/styles/partials/_helpers.sass
+++ b/src/styles/partials/_helpers.sass
@@ -60,6 +60,8 @@
 /* ===================================
 	 FONT
 	 =================================== */
+=muller
+	font-family: 'MullerRegular', Arial, sans-serif
 
 
 /* ===================================
