--- a/src/styles/partials/_variables.sass
+++ b/src/styles/partials/_variables.sass
@@ -6,23 +6,11 @@ $minDesk: $tab + 1
 $minTab: $mob + 1
 
 //colors from hovermap
-$color1: #2e3a4d
-$color2: #00cbd5
-$color3: #ff7800
-$color0: #ffffff
-$color4: #f5f3f3
-$color5: #344152
-$color6: #2e3b4c
-$color7: #ff4949
-$color8: #4E311F
-
-// Margins(desk):
-$topOffset: 90px
-$topOffset2: 100px // without title or text
-$botOffset: 80px
-// Margins(tab):
-$offsetTab: 70px
-$topOffsetTab2: 80px
-// Margins(mob):
-$topOffsetMob: 60px
-$botOffsetMob: 70px
+$color1: #5c9ef4
+$color2: #1212b9
+$color3: #551d87
+$color4: #db285e
+$color5: #a0a0a0
+$color6: #ffffff
+$color7: #323232
+$color8: #d92c60
