start block How

--- a/src/styles/components/common.sass
+++ b/src/styles/components/common.sass
@@ -1,9 +1,8 @@
 body
-	//+paragraph-text
+	+paragraph-text
 	color: #1f1f1f
 	-webkit-font-smoothing: antialiased
 	background-color: #4A2889
-	line-height: 1.33333
 	&.is-overflow
 		overflow: hidden
 	&.is-fixed
