--- a/src/styles/partials/_helpers.sass
+++ b/src/styles/partials/_helpers.sass
@@ -60,9 +60,19 @@
 /* ===================================
 	 FONT
 	 =================================== */
-=muller
-	font-family: 'MullerRegular', Arial, sans-serif
+=h1
+	+f('Gilroy-ExtraBold',44,56,20)
+	text-transform: uppercase
+	
+=h2
+	+f('Gilroy-Bold',35,36,0)
+	
+=h3
+	+f('Gilroy-Bold',26,30,0)
 
+=paragraph-text
+	+f('MullerRegular',18,24,0)
+	
 
 /* ===================================
 	 LINK
