--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -14,6 +14,7 @@
 @import 'components/common';
 @import 'components/jelly';
 @import 'components/header';
+@import 'components/btn';
 
 /* PAGES */
 @import 'pages/home/home';
