--- a/src/styles/pages/home/screen.sass
+++ b/src/styles/pages/home/screen.sass
@@ -1,12 +1,31 @@
 .screen
 	position: relative
 	height: 100vh
+	color: $color6
+	background-image: linear-gradient(-187deg, #1e14a8 0%, #50218e 56%, #50218e 100%)
 	
 	&__canvas
 		+ratio-in
 		z-index: 1
 		width: 100%
 		height: 100%
+		svg
+			display: none
+			
+	&__content
+		position: relative
+		z-index: 2
+		padding-top: 197px
+		&-in
+			padding: 0 100px
+			
+	&__title
+		+h1
+		max-width: 720px
 		
-	svg
-		display: none
+	&__text
+		margin-top: 19px
+		max-width: 660px
+		
+	&__btn-wrap
+		margin-top: 53px
