--- a/src/styles/partials/_svg.scss
+++ b/src/styles/partials/_svg.scss
@@ -1,5 +1,71 @@
-.icon-vintage-logo {
-  width: 0.73em;
+.icon-01 {
+  width: 1.25em;
+  height: 1em;
+  fill: #fff;
+  stroke: #a0a0a0;
+}
+.icon-02 {
+  width: 1.49em;
+  height: 1em;
+  fill: none;
+  stroke: #A0A0A0;
+}
+.icon-03 {
+  width: 1.5em;
+  height: 1em;
+  fill: none;
+  stroke: #A0A0A0;
+}
+.icon-04 {
+  width: 1.6em;
+  height: 1em;
+  fill: none;
+  stroke: #A0A0A0;
+}
+.icon-05 {
+  width: 1.53em;
+  height: 1em;
+  fill: none;
+  stroke: #A0A0A0;
+}
+.icon-06 {
+  width: 1.57em;
+  height: 1em;
+  fill: none;
+  stroke: #A0A0A0;
+}
+.icon-facebook {
+  width: 1em;
+  height: 1em;
+  fill: currentColor;
+  stroke: initial;
+}
+.icon-insta {
+  width: 1em;
+  height: 1em;
+  fill: currentColor;
+  stroke: initial;
+}
+.icon-skype {
+  width: 1em;
+  height: 1em;
+  fill: currentColor;
+  stroke: initial;
+}
+.icon-slack {
+  width: 1em;
+  height: 1em;
+  fill: currentColor;
+  stroke: initial;
+}
+.icon-telegram {
+  width: 1em;
+  height: 1em;
+  fill: currentColor;
+  stroke: initial;
+}
+.icon-viber {
+  width: 1em;
   height: 1em;
   fill: currentColor;
   stroke: initial;
