--- a/src/styles/components/common.sass
+++ b/src/styles/components/common.sass
@@ -2,7 +2,7 @@ body
 	+paragraph-text
 	color: #1f1f1f
 	-webkit-font-smoothing: antialiased
-	background-color: #4A2889
+	background-color: $color6
 	&.is-overflow
 		overflow: hidden
 	&.is-fixed
