--- a/src/template/pages/home/how.pug
+++ b/src/template/pages/home/how.pug
@@ -1,4 +1,16 @@
 +b.SECTION.how
+	+e.gradient
+		+e.gradient-el
+		+e.gradient-el
+		+e.gradient-el
+
+	+e.round-bottom
+		.
+			<svg viewBox="0 0 1282 81">
+				<path d="M0,80.5h641.4C320.9,80.5,0,0.5,0,0.5V80.5z"/>
+				<path d="M1281,0.5c0,0-319.6,80-639.6,80H1282v-80H1281z"/>
+			</svg>
+
 	+e.container.container
 		+e.title Как это работает
 		+e.text Любая продажа строится на коммуникациях с клиентом, будь то знакомство с продуктом, представление новых функций или поддержка. Мы выводим процесс коммуникаций с клиентом инновационный уровень, разрабатвая боты под популярные/следующие платформы:
@@ -46,4 +58,29 @@
 					+e.history-title Подключение модулей
 					+e.history-text Определение направлений и функций, где бот будет полезен для ваших клиентов.
 
+			+e.history-el_4
+				+e.history-canvas
+					img(src='static/img/test/test4.png' alt='image')
+				+e.history-number
+					+i('04')
+				+e.history-content
+					+e.history-title Тестирование
+					+e.history-text Определение направлений и функций, где бот будет полезен для ваших клиентов.
 
+			+e.history-el_5
+				+e.history-canvas
+					img(src='static/img/test/test5.png' alt='image')
+				+e.history-number
+					+i('05')
+				+e.history-content
+					+e.history-title Публикация бота на странице Facebook
+					+e.history-text Определение направлений и функций, где бот будет полезен для ваших клиентов.
+
+			+e.history-el_6
+				+e.history-canvas
+					img(src='static/img/test/test6.png' alt='image')
+				+e.history-number
+					+i('06')
+				+e.history-content
+					+e.history-title Профит
+					+e.history-text Определение направлений и функций, где бот будет полезен для ваших клиентов.
