--- a/src/styles/partials/_svg.scss
+++ b/src/styles/partials/_svg.scss
@@ -34,6 +34,12 @@
   fill: none;
   stroke: #A0A0A0;
 }
+.icon-circle-round-bottom {
+  width: 16.02em;
+  height: 1em;
+  fill: currentColor;
+  stroke: initial;
+}
 .icon-facebook {
   width: 1em;
   height: 1em;
