--- a/src/template/pages/home/how.pug
+++ b/src/template/pages/home/how.pug
@@ -11,6 +11,14 @@
 				<path d="M1281,0.5c0,0-319.6,80-639.6,80H1282v-80H1281z"/>
 			</svg>
 
+	svg.is-hidden
+		path#path-how-1(d='M69.005,75.918 C139.703,30.693 249.171,-46.600 345.529,37.443 C441.887,121.484 490.431,200.368 418.726,261.891 C347.022,323.412 158.055,381.676 60.871,287.542 C-36.312,193.401 -1.694,121.143 69.005,75.918 Z')
+		path#path-how-2(d='M0.588,207.597 C-9.308,66.038 112.951,9.894 230.659,1.316 C348.367,-7.258 381.256,127.830 395.583,213.821 C409.910,299.812 326.068,315.336 209.426,364.212 C85.675,416.067 5.806,282.272 0.588,207.597 Z')
+		path#path-how-3(d='M410.350,223.687 C370.485,291.710 312.406,404.086 184.810,355.603 C57.209,307.123 -25.449,247.280 7.115,163.116 C39.674,78.951 177.722,-42.183 311.128,15.800 C444.539,73.783 450.220,155.664 410.350,223.687 Z')
+		path#path-how-4(d='M402.712,141.186 C399.770,211.571 402.080,325.228 260.569,327.526 C119.058,329.819 13.275,307.490 1.480,226.041 C-10.314,144.591 56.643,-3.299 208.217,0.413 C359.790,4.126 405.654,70.799 402.712,141.186 Z')
+		path#path-how-5(d='M417.330,185.645 C403.089,298.233 292.018,389.774 163.208,386.925 C39.261,384.185 12.136,246.594 1.805,155.998 C-8.526,65.402 80.277,53.743 205.314,9.039 C337.970,-38.390 426.531,112.901 417.330,185.645 Z')
+		path#path-how-6(d='M57.080,106.431 C143.768,78.887 167.116,-9.028 299.453,0.756 C442.448,11.325 454.420,172.418 427.577,247.408 C388.906,355.439 196.964,394.817 86.711,321.656 C-23.544,248.488 -23.202,131.941 57.080,106.431 Z')
+
 	+e.container.container
 		+e.title Как это работает
 		+e.text Любая продажа строится на коммуникациях с клиентом, будь то знакомство с продуктом, представление новых функций или поддержка. Мы выводим процесс коммуникаций с клиентом инновационный уровень, разрабатвая боты под популярные/следующие платформы:
@@ -33,7 +41,6 @@
 
 			+e.history-el_1
 				+e.history-canvas
-					img(src='static/img/test/test1.png' alt='image')
 				+e.history-number
 					+i('01')
 				+e.history-content
@@ -42,7 +49,6 @@
 
 			+e.history-el_2
 				+e.history-canvas
-					img(src='static/img/test/test2.png' alt='image')
 				+e.history-number
 					+i('02')
 				+e.history-content
@@ -51,7 +57,6 @@
 
 			+e.history-el_3
 				+e.history-canvas
-					img(src='static/img/test/test3.png' alt='image')
 				+e.history-number
 					+i('03')
 				+e.history-content
@@ -60,7 +65,6 @@
 
 			+e.history-el_4
 				+e.history-canvas
-					img(src='static/img/test/test4.png' alt='image')
 				+e.history-number
 					+i('04')
 				+e.history-content
@@ -69,7 +73,6 @@
 
 			+e.history-el_5
 				+e.history-canvas
-					img(src='static/img/test/test5.png' alt='image')
 				+e.history-number
 					+i('05')
 				+e.history-content
@@ -78,7 +81,6 @@
 
 			+e.history-el_6
 				+e.history-canvas
-					img(src='static/img/test/test6.png' alt='image')
 				+e.history-number
 					+i('06')
 				+e.history-content
