--- a/src/styles/pages/home/how.sass
+++ b/src/styles/pages/home/how.sass
@@ -18,13 +18,13 @@
 				background-image: linear-gradient(-18deg, #1e14a8 0%, #50218e 56%, #50218e 100%)
 			&:nth-child(2)
 				z-index: 2
-				margin-top: -100px
-				height: calc(33.333% + 100px)
+				margin-top: -50px
+				height: calc(33.333% + 50px)
 				background-image: linear-gradient(-165deg, #1e14a8 0%, #50218e 56%, #50218e 100%)
 			&:nth-child(3)
 				z-index: 4
-				margin-top: -100px
-				height: calc(33.333% + 100px)
+				margin-top: -200px
+				height: calc(33.333% + 200px)
 				background-image: linear-gradient(-30deg, #1e14a8 0%, #50218e 56%, #50218e 100%)
 	
 	&__round-bottom
@@ -147,8 +147,9 @@
 		&-canvas
 			position: absolute
 			z-index: 2
-			padding-top: 50px
-			padding-left: 50px
+			canvas
+				width: 100%
+				height: 100%
 			
 		&-content
 			position: absolute
