--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -15,6 +15,7 @@
 @import 'components/jelly';
 @import 'components/header';
 @import 'components/btn';
+@import '../../node_modules/tiny-slider/src/tiny-slider';
 
 /* PAGES */
 @import 'pages/home/home';
