--- a/src/styles/pages/home/how.sass
+++ b/src/styles/pages/home/how.sass
@@ -3,6 +3,9 @@
 	padding: 100px 0
 	color: $color6
 	
+	[data-line]
+		z-index: 4
+	
 	&__gradient
 		position: absolute
 		top: 0
@@ -14,15 +17,15 @@
 			position: relative
 			height: 33.333%
 			&:nth-child(1)
-				z-index: 3
+				z-index: 0
 				background-image: linear-gradient(-18deg, #1e14a8 0%, #50218e 56%, #50218e 100%)
 			&:nth-child(2)
-				z-index: 2
+				z-index: -1
 				margin-top: -50px
 				height: calc(33.333% + 50px)
 				background-image: linear-gradient(-165deg, #1e14a8 0%, #50218e 56%, #50218e 100%)
 			&:nth-child(3)
-				z-index: 4
+				z-index: 1
 				margin-top: -200px
 				height: calc(33.333% + 200px)
 				background-image: linear-gradient(-30deg, #1e14a8 0%, #50218e 56%, #50218e 100%)
@@ -163,7 +166,7 @@
 			left: 124px
 		&-el_1 &-number
 			top: 20px
-			left: 0
+			left: -1px
 		&-el_1 &-canvas
 			top: 70px
 			left: -30px
@@ -177,7 +180,7 @@
 			left: calc(50% + 157px)
 		&-el_2 &-number
 			top: -154px
-			right: 0
+			right: -3px
 		&-el_2 &-canvas
 			top: -85px
 			right: -5px
@@ -191,7 +194,7 @@
 			left: 149px
 		&-el_3 &-number
 			top: -140px
-			left: 0
+			left: -1px
 		&-el_3 &-canvas
 			top: -82px
 			left: -3px
@@ -205,7 +208,7 @@
 			left: calc(50% + 172px)
 		&-el_4 &-number
 			top: -155px
-			right: 0
+			right: -3px
 		&-el_4 &-canvas
 			top: -81px
 			right: -15px
@@ -219,7 +222,7 @@
 			left: 172px
 		&-el_5 &-number
 			top: -130px
-			left: 0
+			left: -1px
 		&-el_5 &-canvas
 			top: -52px
 			left: 33px
@@ -233,9 +236,9 @@
 			left: calc(50% + 107px)
 		&-el_6 &-number
 			top: -95px
-			right: 0
+			right: -3px
 		&-el_6 &-canvas
 			top: -19px
-			right: 72px
+			right: 32px
 			width: calc(440px + 100px)
 			height: calc(359px + 100px)
