--- a/src/template/pages/home.pug
+++ b/src/template/pages/home.pug
@@ -7,4 +7,5 @@ block main
 	main.content(data-page='home')
 		include home/screen
 		include home/how
-		div(style='height: 1000px; background: white;')
+		include home/loc
+		include home/advantage
