--- a/src/styles/partials/_svg.scss
+++ b/src/styles/partials/_svg.scss
@@ -34,8 +34,38 @@
   fill: none;
   stroke: #A0A0A0;
 }
-.icon-circle-round-bottom {
-  width: 16.02em;
+.icon-advantage-1 {
+  width: 1em;
+  height: 1em;
+  fill: currentColor;
+  stroke: initial;
+}
+.icon-advantage-2 {
+  width: 1em;
+  height: 1em;
+  fill: currentColor;
+  stroke: initial;
+}
+.icon-advantage-3 {
+  width: 1em;
+  height: 1em;
+  fill: currentColor;
+  stroke: initial;
+}
+.icon-advantage-4 {
+  width: 1em;
+  height: 1em;
+  fill: currentColor;
+  stroke: initial;
+}
+.icon-advantage-5 {
+  width: 0.7em;
+  height: 1em;
+  fill: currentColor;
+  stroke: initial;
+}
+.icon-advantage-6 {
+  width: 0.88em;
   height: 1em;
   fill: currentColor;
   stroke: initial;
