--- a/src/styles/components/btn.sass
+++ b/src/styles/components/btn.sass
@@ -6,3 +6,9 @@
 	+f('Gilroy-ExtraBold',20,32,0)
 	color: $color6
 	background-color: $color4
+	
+	&_white
+		padding: 16px 40px 24px
+		background-color: transparent
+		border: 2px solid $color4
+		color: $color4
