--- a/src/styles/components/header.sass
+++ b/src/styles/components/header.sass
@@ -104,6 +104,7 @@
 				left: calc(50% + 8px)
 		&-icon
 			display: block
+			color: $color4
 			&:before
 				pointer-events: none
 				content: ''
