--- a/src/styles/pages/home/top.sass
+++ b/src/styles/pages/home/top.sass
@@ -1,6 +1,10 @@
 .top
+	position: relative
+	padding-top: 103px
+	padding-bottom: 60px
+	
 	&__container
-		padding: 0 70px
+		padding: 0 71px
 	
 	&__title
 		margin: 0 auto
@@ -10,7 +14,12 @@
 	
 	&__list
 		display: flex
-		margin: 45px -25px 0
+		margin: 70px -25px 0
 		&-item
+			display: flex
 			flex: 1 0 33.333%
 			padding: 0 25px
+			
+	&__btn-wrap
+		margin-top: 60px
+		text-align: center
