--- a/src/styles/partials/_fonts.sass
+++ b/src/styles/partials/_fonts.sass
@@ -1,3 +1,4 @@
 +font('MullerRegular', 'MullerRegular')
++font('MullerMedium', 'MullerMedium')
 +font('Gilroy-Bold', 'Gilroy-Bold')
 +font('Gilroy-ExtraBold', 'Gilroy-ExtraBold')
