--- a/src/styles/partials/_svg.scss
+++ b/src/styles/partials/_svg.scss
@@ -76,6 +76,12 @@
   fill: currentColor;
   stroke: initial;
 }
+.icon-fb {
+  width: 1em;
+  height: 1em;
+  fill: currentColor;
+  stroke: initial;
+}
 .icon-insta {
   width: 1em;
   height: 1em;
