--- a/src/template/pages/home/example.pug
+++ b/src/template/pages/home/example.pug
@@ -11,6 +11,12 @@
 				-btnClass = '_default'
 				-btnText = 'Заказать себе бот'
 				include ../../components/btn
+			+e.slider-chat
+				+e.slider-chat-text(href='#!') Поговорить с ботом
+				+e.slider-chat-icon(href='#!')
+					+i('telegram')
+				+e.slider-chat-icon(href='#!')
+					+i('facebook')
 			+e.slider
 				+e.slider-item
 					+e.slider-row
