--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -15,6 +15,7 @@
 @import 'components/common';
 @import 'components/jelly';
 @import 'components/header';
+@import 'components/footer';
 @import 'components/btn';
 @import 'components/card';
 
