--- a/src/styles/pages/home/example.sass
+++ b/src/styles/pages/home/example.sass
@@ -57,6 +57,28 @@
 				width: 60px
 			&-total
 				opacity: 0.2
+		&-chat
+			position: absolute
+			left: 58px
+			top: 398px
+			display: flex
+			align-items: center
+			&-text
+				+h4
+				color: $color2
+				+trs
+				&.is-active,
+				.no-touch &:hover
+					color: $color4
+			&-icon
+				font-size: 20px
+				color: $color2
+				margin-left: 19px
+				+trs
+				.no-touch &:hover
+					color: $color4
+			.no-touch &-text:hover + &-icon
+				color: $color4
 		&-btn
 			position: absolute
 			z-index: 10
@@ -94,6 +116,8 @@
 			p
 				&:not(:first-child)
 					margin-top: 25px
+			strong
+				+f('MullerMedium',18,24,0)
 		&-image
 			position: relative
 			width: 393px
