--- a/src/styles/pages/home/how.sass
+++ b/src/styles/pages/home/how.sass
@@ -88,6 +88,7 @@
 			position: relative
 			display: block
 			font-size: 26px
+			color: $color4
 			&:before
 				pointer-events: none
 				content: ''
