--- a/src/template/components/footer.pug
+++ b/src/template/components/footer.pug
@@ -1,2 +1,46 @@
-//mixin footer()
-    footer
++b.FOOTER.footer
+	div(data-line)
+
+	+e.round-top
+		.
+			<svg viewBox="0 0 1282 81">
+			<path d="M0,80.5h641.4C320.9,80.5,0,0.5,0,0.5V80.5z"/>
+			<path d="M1281,0.5c0,0-319.6,80-639.6,80H1282v-80H1281z"/>
+			</svg>
+
+	+e.container.container
+		+e.title Контакты
+
+		+e.list
+			+e.list-col
+				+e.list-address.__list-text
+					p 05624, Украина, Киев
+					p ул. Ярославская, 56
+				+e.list-time.__list-text
+					p Пн-Пт: 9:00-18:00
+					p Сб: 9:00-14:00
+					p Вс: выходной
+			+e.list-col
+				+e.list-phone.__list-text
+					p Телефон:
+					a(href='tel: +380999318500') +38 (099)-931-85-00
+				+e.list-mail.__list-text
+					p Почта:
+					a(href='mailto: info@unibot.a') info@unibot.a
+			+e.list-col
+				+e.list-soc-text.__list-text
+					p Мы в
+					p социальных сетях:
+				+e.list-soc.__list-text
+					-socList = ['telegram', 'fb', 'insta']
+					each el in socList
+						+e.list-soc-icon-wrap
+							-socIconClass = '_default __list-soc-icon'
+							-socIcon = el
+							include soc-icon
+
+		+e.bot
+			+e.bot-logo(href='#!')
+				+e.bot-logo-img(src='static/img/logo.svg' alt='image')
+			+e.bot-right
+				-navList = ['Преимущества', 'Как это работает', 'Сферы деятельности', 'Как создаем', 'Кейсы', 'Блог', 'Контакты']
