--- a/src/template/extend/default.pug
+++ b/src/template/extend/default.pug
@@ -32,6 +32,9 @@ html(lang='ru')
 				script.
 					document.createElement('picture');
 
+			// Preloader
+			include ../components/preloader
+
 			// Header
 			include ../components/header
 
