--- a/src/styles/components/preloader.sass
+++ b/src/styles/components/preloader.sass
@@ -12,6 +12,9 @@
 		background-color: transparent
 	&.is-hidden
 		visibility: hidden
+	&.hide-ie
+		transition: all 1s ease
+		opacity: 0
 	
 	&__inner
 		display: flex
