--- a/src/styles/pages/home/advantage.sass
+++ b/src/styles/pages/home/advantage.sass
@@ -1,6 +1,7 @@
 .advantage
 	position: relative
-	padding-bottom: 100px
+	padding-top: 60px
+	padding-bottom: 50px
 	
 	&__container
 		padding: 0 70px
