--- a/src/template/pages/home/advantage.pug
+++ b/src/template/pages/home/advantage.pug
@@ -1,4 +1,4 @@
-+b.SECTION.advantage#advantage
++b.SECTION.advantage#advantage(data-scroll-section)
 	div(data-line)
 	+e.container.container
 		+e.title Наши приемущества
