--- a/src/template/pages/home/example.pug
+++ b/src/template/pages/home/example.pug
@@ -1,4 +1,4 @@
-+b.SECTION.example#example
++b.SECTION.example#example(data-scroll-section)
 	div(data-line)
 	+e.container.container
 		+e.title Примеры работ
