--- a/src/template/pages/home/top.pug
+++ b/src/template/pages/home/top.pug
@@ -1,4 +1,4 @@
-+b.SECTION.top#top
++b.SECTION.top#top(data-scroll-section)
 	div(data-line)
 	+e.container.container
 		+e.title Интересные статьи о ботах
