--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -14,6 +14,7 @@
 /* COMPONENTS */
 @import 'components/common';
 @import 'components/preloader';
+@import 'components/navigation';
 @import 'components/jelly';
 @import 'components/header';
 @import 'components/footer';
