--- a/src/template/pages/home/how.pug
+++ b/src/template/pages/home/how.pug
@@ -1,4 +1,4 @@
-+b.SECTION.how#how
++b.SECTION.how#how(data-scroll-section)
 	div(data-line)
 
 	+e.gradient
@@ -6,7 +6,7 @@
 		+e.gradient-el
 		+e.gradient-el
 
-	+e.round-bottom
+	//+e.round-bottom
 		.
 			<svg viewBox="0 0 1282 81">
 				<path d="M0,80.5h641.4C320.9,80.5,0,0.5,0,0.5V80.5z"/>
