--- a/src/styles/pages/home/how.sass
+++ b/src/styles/pages/home/how.sass
@@ -6,6 +6,10 @@
 	[data-line]
 		z-index: 4
 	
+	&__chat
+		position: relative
+		z-index: 5
+	
 	&__gradient
 		position: absolute
 		top: 0
@@ -62,6 +66,7 @@
 		display: flex
 		justify-content: center
 		align-items: center
+		pointer-events: none
 		&-icon-wrap
 			position: relative
 			margin: 0 14px
