--- a/src/styles/partials/_svg.scss
+++ b/src/styles/partials/_svg.scss
@@ -70,6 +70,18 @@
   fill: currentColor;
   stroke: initial;
 }
+.icon-bot {
+  width: 1.01em;
+  height: 1em;
+  fill: currentColor;
+  stroke: initial;
+}
+.icon-close {
+  width: 1em;
+  height: 1em;
+  fill: currentColor;
+  stroke: initial;
+}
 .icon-facebook {
   width: 1em;
   height: 1em;
@@ -95,6 +107,12 @@
   stroke: initial;
 }
 .icon-slack {
+  width: 1em;
+  height: 1em;
+  fill: currentColor;
+  stroke: initial;
+}
+.icon-submit {
   width: 1em;
   height: 1em;
   fill: currentColor;
