--- a/src/template/pages/home/top.pug
+++ b/src/template/pages/home/top.pug
@@ -19,9 +19,8 @@
 					+b.card(href='#!')
 						+e.DIV.image
 							+e.IMG.image-img(src=`static/img/content/loc-slider-${index + 1}.jpg` alt='image')
-							+e.SVG.image-svg(viewBox="0 0 297.3 217.1" preserveAspectRatio='none')
-								path(d='M127.6,217.1h-0.5C127.3,217.1,127.4,217.1,127.6,217.1z')
-								path(d='M297.3,0H0v217.1h127.1c-33.1-0.2-64.9-9.1-88.4-31.9C-24.1,124.6-1.7,78.1,43.9,49C89.6,19.9,177.8-30,240,24.1s76.2,105,29.8,144.6c-28.9,24.7-87.2,48.6-142.3,48.4h169.7V0z')
+							+e.SVG.image-svg(viewBox="0 0 300 219" preserveAspectRatio='none')
+								path(d='M0,0v219h300V0H0z M271.8,169.7c-46.3,39.6-168.4,77.1-231.1,16.5C-22.1,125.6,0.3,79.1,45.9,50C91.6,20.9,179.8-29,242,25.1C304.2,79.2,318.2,130.1,271.8,169.7z')
 						+e.DIV.title= el[0]
 						+e.DIV.text= el[1]
 						+e.DIV.more
