--- a/src/styles/components/footer.sass
+++ b/src/styles/components/footer.sass
@@ -1,9 +1,21 @@
 .footer
 	position: relative
+	overflow: hidden
 	color: $color6
 	background-size: 100% auto
 	background-image: linear-gradient(-197deg, #1e14a8 0%, $color4 100%)
 	padding-bottom: 130px
+	&:before
+		pointer-events: none
+		content: ''
+		position: absolute
+		z-index: 0
+		top: 0
+		left: calc(50% - 245px)
+		width: 885px
+		height: 590px
+		background: transparent url('../img/footer-map.png') center center no-repeat
+		background-size: cover
 	
 	[data-line]
 		z-index: 4
@@ -22,6 +34,7 @@
 			
 	&__container
 		padding-top: 71px
+		z-index: 2
 	
 	&__title
 		margin: 0 auto
