--- a/src/styles/components/navigation.sass
+++ b/src/styles/components/navigation.sass
@@ -3,16 +3,16 @@
 	position: fixed
 	z-index: 98
 	right: 56px
-	bottom: 280px
+	bottom: 50px
 	+f('Gilroy-ExtraBold', 14, 20, 100)
-	color: $color4
+	color: #a0a0a0
 	
 	&__dot
 		width: 4px
 		height: 4px
-		background-color: $color4
+		background-color: #a0a0a0
 		border-radius: 50%
-		opacity: 0.4
+		opacity: 0.2
 		&:not(:first-child)
 			margin-top: 6px
 			
@@ -20,53 +20,53 @@
 		position: absolute
 		right: 24px
 		bottom: 23px
-		opacity: 0.75
+		opacity: 0.5
 	
 	&__total
 		position: absolute
 		bottom: -6px
 		right: 24px
-		opacity: 0.4
+		opacity: 0.2
 		
 .navigation-btn
 	cursor: pointer
 	position: fixed
 	z-index: 98
-	bottom: 280px
+	bottom: 50px
 	left: 44px
 	width: 28px
-	opacity: 0.4
+	opacity: 0.2
 	padding-left: 12px
 	+trs
 	.no-touch &:hover
 		opacity: 1
-		
+	
 	&__dot
 		width: 4px
 		height: 4px
 		border-radius: 50%
-		background-color: $color4
+		background-color: #a0a0a0
 		+trs
 		&:not(:first-child)
 			margin-top: 6px
 	&__circle
 		position: absolute
 		z-index: 2
-		left: 0
+		left: -6px
 		bottom: 0
-		width: 28px
-		height: 28px
+		width: 40px
+		height: 40px
 		border-radius: 50%
-		border: 2px solid $color4
+		border: 2px solid #a0a0a0
 		+trs
 	&.is-active &__circle
-		bottom: calc(64px - 28px)
+		bottom: calc(64px - 40px)
 	
 	.no-touch &:hover &__dot
 		background-color: $color8
 	.no-touch &:hover &__circle
-		transform: translateY(-18px)
+		transform: translateY(-12px)
 		border-color: $color8
 	.no-touch &.is-active:hover &__circle
-		transform: translateY(18px)
+		transform: translateY(12px)
 	
