--- a/src/template/components/soc-icon.pug
+++ b/src/template/components/soc-icon.pug
@@ -1,2 +1,2 @@
-+b.soc-icon(class= socIconClass ? socIconClass : '' href='#!')
++b.soc-icon(class= socIconClass ? socIconClass : '' href= socHref === 'none' ? false: '#!')
 	+i(socIcon)
