--- a/src/styles/pages/home/screen.sass
+++ b/src/styles/pages/home/screen.sass
@@ -27,5 +27,9 @@
 		margin-top: 19px
 		max-width: 660px
 		
-	&__btn-wrap
-		margin-top: 53px
+	&__btn
+		cursor: pointer
+		&-wrap
+			display: table
+			margin-top: 53px
+			border: solid 2px $color4
