--- a/src/styles/pages/home/top.sass
+++ b/src/styles/pages/home/top.sass
@@ -17,7 +17,7 @@
 		margin: 70px -25px 0
 		&-item
 			display: flex
-			flex: 1 0 33.333%
+			flex: 1 1 auto
 			padding: 0 25px
 			
 	&__btn-wrap
