--- a/src/template/pages/home/how.pug
+++ b/src/template/pages/home/how.pug
@@ -35,8 +35,8 @@
 			+e.data-bot
 				div(data-bot='0')
 					p Привет, Человек!
-					p Меня зовут Unibot и я тот, кто больше расскажет тебе о крутых возможностях чатботов!
-					p Ну, что ж, начнем с простого. Как дела?
+					//p Меня зовут Unibot и я тот, кто больше расскажет тебе о крутых возможностях чатботов!
+					//p Ну, что ж, начнем с простого. Как дела?
 				div(data-bot='1')
 					p Текст бота №1
 				div(data-bot='2')
