--- a/src/template/pages/home/screen.pug
+++ b/src/template/pages/home/screen.pug
@@ -6,9 +6,7 @@
 				+e.title НОВЫЙ ИНСТРУМЕНТ ПОСТРОЕНИЯ КОММУНИКАЦИЙ С ПОТРЕБИТЕЛЕМ
 				+e.text Разрабатываем практичные решения, которые соответствуют целям наших клиентов, развивают городскую среду и увеличивают ценность проекта.
 				+e.btn-wrap
-					-btnClass = '_default js-chat-init'
-					-btnText = 'Начать чат с ботом'
-					include ../../components/btn
+					+e.btn.js-chat-init Начать чат с ботом
 
 	+e.canvas
 		+e.SVG.svg.is-hidden
