--- a/src/styles/components/btn.sass
+++ b/src/styles/components/btn.sass
@@ -1,14 +1,107 @@
 .btn
+	position: relative
 	display: inline-block
 	padding: 18px 40px 22px
 	border-radius: 36px
 	height: 72px
+	min-width: 145px
 	+f('Gilroy-ExtraBold',20,32,0)
+	text-align: center
 	color: $color6
-	background-color: $color4
 	
+	&__text
+		position: relative
+		display: block
+		z-index: 2
+	.no-touch &:hover &__text
+		animation: 0.35s btnTextAnim cubic-bezier(0.18, 0.89, 0.32, 1.28) alternate
+	
+	&__bg
+		+ratio-in
+		z-index: 1
+		&-1
+			position: relative
+			z-index: 2
+			fill: $color4
+			width: 100%
+			height: 100%
+			transition: all 0.3s cubic-bezier(0.18, 0.89, 0.32, 1.14)
+		&-2
+			+ratio-in
+			top: -5px
+			z-index: 1
+			fill: $color4
+			width: 100%
+			height: calc(100% + 10px)
+			transform: scaleX(0.95) scaleY(0.7)
+			transition: all 0.3s cubic-bezier(0.18, 0.89, 0.32, 1.14)
+		&-3
+			+ratio-in
+			top: -5px
+			z-index: 1
+			fill: $color4
+			width: 100%
+			height: calc(100% + 10px)
+			transform: scaleX(0.95) scaleY(0.7)
+			transition: all 0.3s cubic-bezier(0.18, 0.89, 0.32, 1.14)
+	.no-touch &:hover &__bg-1
+		transform: scaleY(0.7)
+		transition: all 0.3s cubic-bezier(0.18, 0.89, 0.32, 1.4)
+	.no-touch &:hover &__bg-2
+		transform: translateZ(0)
+		transition: all 0.3s cubic-bezier(0.18, 0.89, 0.32, 1.4)
+	.no-touch &:hover &__bg-3
+		transform: none
+		transition: all 0.3s cubic-bezier(0.18, 0.89, 0.32, 1.4)
+
+	// white
 	&_white
-		padding: 16px 40px 24px
-		background-color: transparent
-		border: 2px solid $color4
+		padding: 18px 40px 24px
 		color: $color4
+	&_white &__bg
+		&:after
+			content: ''
+			position: absolute
+			top: 0
+			left: 0
+			right: 0
+			bottom: 0
+			border: 2px solid $color4
+			border-radius: 36px
+			background-color: $color6
+			transition: all 0.25s ease
+		&-2
+			z-index: -1
+			top: -5px
+			left: -2px
+			right: -2px
+			width: calc(100% + 4px)
+			transition: all 0.25s ease
+		&-3
+			z-index: 2
+			top: -3px
+			left: 0
+			right: 0
+			width: 100%
+			height: 78px
+			fill: $color6
+			transition: all 0.25s ease
+	.no-touch &_white:hover &__bg
+		&:after
+			transform: scaleX(0.95) scaleY(0.7)
+			transition: all 0.3s cubic-bezier(0.18, 0.89, 0.32, 1.4)
+	.no-touch &_white:hover &__bg-2
+		transform: none
+		transition: all 0.3s cubic-bezier(0.18, 0.89, 0.32, 1.4)
+	.no-touch &_white:hover &__bg-3
+		transform: none
+		transition: all 0.3s cubic-bezier(0.18, 0.89, 0.32, 1.4)
+			
+	
+@keyframes btnTextAnim
+	0%
+		transform: translateZ(0)
+	50%
+		transform: scaleX(1.0125) scaleY(1.025) translateZ(0) perspective(1px)
+	100%
+		transform: translateZ(0)
